k8s/flask-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: flask
  name: flask
spec:
  replicas: 1
  selector:
    matchLabels:
      run: flask
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: flask
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "8000"
    spec:
      containers:
      - image: eu.gcr.io/pmoncada-001/keepcoding/flask-counter:v1.5.0
        name: flask
        livenessProbe:
          httpGet:
            path: /health/live
            port: 5000
        readinessProbe:
          httpGet:
            path: /health/ready
            port: 5000
        resources:
          requests:
            memory: 128Mi
            cpu: 100m
          limits:
            memory: 256Mi
            cpu: 200m
        #livenessProbe: {}
            
status: {}
