k8s/redis-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: redis
  name: redis
  selfLink: /api/v1/namespaces/counter/services/redis
spec:
  ports:
  - port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    run: redis
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
