k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: flask
spec:
  rules:
  - host: counter-flask.demo.gcp.moncadaisla.es
    http:
      paths:
      - backend:
          serviceName: flask
          servicePort: 5000
